k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: wahl-o-chat
  annotations:
    traefik.frontend.passHostHeader: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  rules:
  - host: wahl-o-chat.gawron.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wahl-o-chat-service
            port:
              number: 7860
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: wahl-o-chat
  annotations:
    traefik.frontend.passHostHeader: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: wahl-o-chat.gawron.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wahl-o-chat-service
            port:
              number: 7860
